fix: Scroll when overflow in selection dropdown

--- a/frontend/src/components/Subset/Subset.css
+++ b/frontend/src/components/Subset/Subset.css
@@ -14,3 +14,8 @@
   height: 20vh;
   overflow-y: auto;
 }
+
+.selectionBox {
+  overflow-y: auto;
+  max-height: 40vh;
+}
